center welcome text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <div class="welcome-text">
         <h1 class="welcome-text-h1">
           <b class="first">HI, MY NAME IS</b><br>
-          <b class="second">AXEL GEIST.</b><br>
+          <b class="second">AXEL GEIST</b><br>
+          <span class="cursor hidden"></span>
           <b class="third" id="typingEffect">Welcome, Bienvenue, 欢迎, Willkommen, Добро пожаловать, ようこそ, 환영합니다, أهلاً وسهلاً, स्वागत है, Welkom, Välkommen, Καλώς ήρθατε</b>
           <span id="holder"> </span>
           <span class="cursor"></span>
