add current full time position

--- a/index.html
+++ b/index.html
@@ -220,6 +220,17 @@
           <div class="experience-text" data-aos="fade-left" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
             <div class="title">Software Engineering</div>
             <div class="text">Datadog (Cloud Monitoring)</div>
+            <div class="text">Aug 2024 - Present, France</div>
+            <div class="work-type">Full-Time</div>
+          </div>
+
+          <div class="experience-img" data-aos="fade-right" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
+            <a href="https://www.datadoghq.com/" target="_blank"><img src="images\datadog_logo.svg" alt="R&S_logo"></a>
+          </div>
+          <div class="space-div"></div>
+          <div class="experience-text" data-aos="fade-left" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
+            <div class="title">Software Engineering</div>
+            <div class="text">Datadog (Cloud Monitoring)</div>
             <div class="text">Jun 2023 - Dec 2023, France</div>
             <div class="work-type">Internship</div>
           </div>
