remove project section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li><a class="menu" href="#About">About</a></li>
               <li><a class="menu" href="#Experience">Experience</a></li>
               <li><a class="menu" href="#Education">Education</a></li>
-              <li><a class="menu" href="#Projects">Projects</a></li>
+              <!-- <li><a class="menu" href="#Projects">Projects</a></li> -->
               <li><a class="menu" href="#Contact">Contact</a></li>
               <li>
                 <div><a class="CVButton" href="RESUME/RESUME_AXEL_GEIST.pdf" target = _blank>Resume</a></div>
@@ -333,7 +333,7 @@
 
 
             <!-- Projects -->
-            <div id="Projects"></div>
+            <!-- <div id="Projects"></div>
             <div class="project-section">
               <h1 data-aos="fade-down" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">PROJECTS</h1>
 
@@ -371,7 +371,7 @@
                   <div class="text">Back-End: Node.js, REST API, WebSockets</div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
 
 
