add gatech education

--- a/index.html
+++ b/index.html
@@ -300,14 +300,22 @@
         <div class="education-grid grid">
 
             <div class="education-img" data-aos="fade-right" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
+              <a href="https://www.gatech.edu/" target="_blank"><img src="images/GTech_logo.png" alt="GTech_logo"></a></div>
+            <div class="space-div"></div>
+            <div class="education-text" id="TUD-text" data-aos="fade-left" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
+              <div class="title">Georgia Tech Institute of Technology</div>
+              <div class="text">Master of Science, Computer Science</div>
+              <div class="text">2025 - present, USA</div>
+            </div>
+
+            <div class="education-img" data-aos="fade-right" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
               <a href="https://www.tudelft.nl/en" target="_blank"><img src="images/TU_Delft_logo.png" alt="TU_Delft_logo"></a></div>
             <div class="space-div"></div>
             <div class="education-text" id="TUD-text" data-aos="fade-left" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
               <div class="title">Delft University of Technology</div>
               <div class="text">Bachelor of Science, Computer Science & Engineering</div>
               <div class="text">2021 - 2024, Netherlands</div>
-            </div>
-               
+            </div>               
 
             <div class="education-img" data-aos="fade-right" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
               <a href="https://www.hfwu.com/" target="_blank"><img src="images/HfWU_logo.png" alt="HfWU_logo"></a> 
