--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               <a href="https://www.gatech.edu/" target="_blank"><img src="images/GTech_logo.png" alt="GTech_logo"></a></div>
             <div class="space-div"></div>
             <div class="education-text" id="TUD-text" data-aos="fade-left" data-aos-delay="50" data-aos-easing="ease-in" data-aos-once="true">
-              <div class="title">Georgia Tech Institute of Technology</div>
+              <div class="title">Georgia Institute of Technology</div>
               <div class="text">Master of Science, Computer Science</div>
               <div class="text">2025 - present, USA</div>
             </div>
